  features directly.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt

+ KGySoft.Drawing.SkiaSharp namespace
=====================================
+ New SKPathExtensions class:
  + New ToPath method: to convert an SKPath to a KGySoft.Drawing.Shapes.Path.


~~~~~~~~~
* v9.1.0:
~~~~~~~~~

* Assembly changes
==================
* Referencing KGySoft.Drawing.Core v9.1.0, which contains minor bug fixes.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt


~~~~~~~~~
! v9.0.0:
~~~~~~~~~

! Assembly changes
==================
! Upgrading SkiaSharp package from 2.88.6 to 3.116.1. This is required to support the new color formats.
! Dropping support for .NET Core 2.0. Manual compilation for .NET Core 2.0 is still possible but the public NuGet
  packages are not going to support this platform anymore. If you target the .NET Core 2.0 platform in your project,
  the v9.0.0 version of the NuGet package will pick the .NET Standard 2.0 build instead.
* Referencing KGySoft.Drawing.Core v9.0.0, which enables high performance shape drawing. Combined with this package
  it makes possible to draw shapes into SKBitmap instances of any pixel format, even with quantizing and dithering.
  See also https://github.com/koszeggy/KGySoft.Drawing/blob/master/KGySoft.Drawing.Core/changelog.txt
  and also https://github.com/koszeggy/KGySoft.Drawing/blob/master/README.md#shape-drawing

+ KGySoft.Drawing.SkiaSharp namespace
=====================================
+ SKImageInfoExtensions, SKBitmapExtensions, SKPixmapExtensions, SKImageExtensions, SKSurfaceExtensions classes:
  + Supporting the new Bgr101010xXR color type directly.
  + Supporting the new Srgba8888 color type directly.
  + Supporting the new R8Unorm color type directly.


~~~~~~~~~
* v8.1.0:
~~~~~~~~~

* Assembly changes
==================
* Referencing KGySoft.Drawing.Core v8.1.0, which mainly improves performance.